crates/parser/src/tests/snapshots/parser__tests__grammar__invalid_inner_attr_recovery.snap
---
source: crates/parser/src/tests/grammar.rs
description: "foo: mod = { #![inner]; bar: mod; };"
expression: parse(input)
---
Output {
    steps: [
        Enter(SourceFile),
        Enter(ModuleInner),
        Enter(ModuleItem),
        Ident(1),
        Colon(1),
        KwMod(1),
        Eq(1),
        Enter(Module),
        OpenBrace(1),
        Enter(ModuleInner),
        Exit,
        Error(0),
        Exit,
        Error(1),
        Exit,
        Exit,
        Exit,
    ],
    errors: [
        Expected {
            expected: CloseBrace,
            actual: Eof,
        },
        Expected {
            expected: Semi,
            actual: Eof,
        },
    ],
}
