crates/parser/src/tests/snapshots/parser__tests__grammar__iterate_is_a_regular_name.snap
---
source: crates/parser/src/tests/grammar.rs
description: "iterate: mod = { iterate: mod; };"
expression: parse(input)
---
Output {
    steps: [
        Enter(SourceFile),
        Enter(ModuleInner),
        Enter(ModuleItem),
        Enter(Name),
        Ident(1),
        Exit,
        Colon(1),
        KwMod(1),
        Eq(1),
        Enter(Module),
        OpenBrace(1),
        Enter(ModuleInner),
        Enter(ModuleItem),
        Enter(Name),
        Ident(1),
        Exit,
        Colon(1),
        KwMod(1),
        Semi(1),
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        Semi(1),
        Exit,
        Exit,
        Exit,
    ],
    errors: [],
}
