crates/parser/src/tests/snapshots/parser__tests__grammar__logical_chain_expr.snap
---
source: crates/parser/src/tests/grammar.rs
description: "1 /\\ 2 /\\ 3"
expression: parse_expr(input)
---
Output {
    steps: [
        Enter(ChainExpr),
        Enter(LiteralExpr),
        Int(1),
        Exit,
        SlashBackslash(2),
        Enter(LiteralExpr),
        Int(1),
        Exit,
        SlashBackslash(2),
        Enter(LiteralExpr),
        Int(1),
        Exit,
        Exit,
    ],
    errors: [],
}
