crates/parser/src/tests/snapshots/parser__tests__grammar__method_name_is_a_single_name.snap
---
source: crates/parser/src/tests/grammar.rs
description: "{ a.b; a.b(); a.b{}; a.b::c(); C::d(); }"
expression: parse_expr(input)
---
Output {
    steps: [
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(ExprStmt),
        Enter(FieldExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Dot(1),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(ExprStmt),
        Enter(MethodCallExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Dot(1),
        Enter(Name),
        Ident(1),
        Exit,
        Enter(ArgList),
        Enter(TupleExpr),
        OpenParen(1),
        CloseParen(1),
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(ExprStmt),
        Enter(MethodCallExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Dot(1),
        Enter(Name),
        Ident(1),
        Exit,
        Enter(ArgList),
        Enter(RecordExpr),
        OpenBrace(1),
        CloseBrace(1),
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(FieldExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Dot(1),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Enter(ExprStmt),
        Enter(ErrorExpr),
        Error(0),
        Colon(1),
        Colon(1),
        Ident(1),
        OpenParen(1),
        CloseParen(1),
        Exit,
        Semi(1),
        Exit,
        Enter(ExprStmt),
        Enter(CallExpr),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        ColonColon(2),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Enter(ArgList),
        Enter(TupleExpr),
        OpenParen(1),
        CloseParen(1),
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        CloseBrace(1),
        Exit,
    ],
    errors: [
        Expected {
            expected: Ident,
            actual: Colon,
        },
    ],
}
