crates/parser/src/tests/snapshots/parser__tests__grammar__missing_binding_expr.snap
---
source: crates/parser/src/tests/grammar.rs
description: "{ x := ; }"
expression: parse_expr(input)
---
Output {
    steps: [
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(ShortLetStmt),
        Ident(1),
        ColonEq(2),
        Enter(ErrorExpr),
        Error(0),
        Exit,
        Semi(1),
        Exit,
        CloseBrace(1),
        Exit,
    ],
    errors: [
        Expected {
            expected: Ident,
            actual: Semi,
        },
    ],
}
