crates/parser/src/tests/snapshots/parser__tests__grammar__missing_type_item_rhs.snap
---
source: crates/parser/src/tests/grammar.rs
description: "Point: type = ;"
expression: parse(input)
---
Output {
    steps: [
        Enter(SourceFile),
        Enter(ModuleInner),
        Enter(TypeItem),
        Enter(Name),
        Ident(1),
        Exit,
        Colon(1),
        Enter(TypeKind),
        KwType(1),
        Exit,
        Eq(1),
        Enter(ErrorType),
        Error(0),
        Exit,
        Semi(1),
        Exit,
        Exit,
        Exit,
    ],
    errors: [
        Expected {
            expected: Ident,
            actual: Semi,
        },
    ],
}
