crates/parser/src/tests/snapshots/parser__tests__grammar__mixed_module_inner.snap
---
source: crates/parser/src/tests/grammar.rs
description: "foo: mod = { add: (Int) -> Int = \\a. a; Point: type = { x: Int }; bar: mod; };"
expression: parse(input)
---
Output {
    steps: [
        Enter(SourceFile),
        Enter(ModuleInner),
        Enter(ModuleItem),
        Enter(Name),
        Ident(1),
        Exit,
        Colon(1),
        KwMod(1),
        Eq(1),
        Enter(Module),
        OpenBrace(1),
        Enter(ModuleInner),
        Enter(FunctionItem),
        Enter(Name),
        Ident(1),
        Exit,
        Colon(1),
        Enter(FnType),
        Enter(TupleType),
        OpenParen(1),
        Enter(TypeField),
        Enter(PathType),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
        CloseParen(1),
        Exit,
        ThinArrow(2),
        Enter(PathType),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
        Eq(1),
        Enter(ClosureExpr),
        Backslash(1),
        Enter(IdentPat),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Dot(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(TypeItem),
        Enter(Name),
        Ident(1),
        Exit,
        Colon(1),
        Enter(TypeKind),
        KwType(1),
        Exit,
        Eq(1),
        Enter(RecordType),
        OpenBrace(1),
        Enter(TypeField),
        Enter(Name),
        Ident(1),
        Exit,
        Colon(1),
        Enter(PathType),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        Semi(1),
        Exit,
        Enter(ModuleItem),
        Enter(Name),
        Ident(1),
        Exit,
        Colon(1),
        KwMod(1),
        Semi(1),
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        Semi(1),
        Exit,
        Exit,
        Exit,
    ],
    errors: [],
}
