crates/parser/src/tests/snapshots/parser__tests__grammar__mod_decl.snap
---
source: crates/parser/src/tests/grammar.rs
description: "foo: mod;"
expression: parse(input)
---
Output {
    steps: [
        Enter(SourceFile),
        Enter(ModuleInner),
        Enter(ModuleItem),
        Enter(Name),
        Ident(1),
        Exit,
        Colon(1),
        KwMod(1),
        Semi(1),
        Exit,
        Exit,
        Exit,
    ],
    errors: [],
}
