crates/parser/src/tests/snapshots/parser__tests__grammar__names_are_wrapped_in_name_nodes.snap
---
source: crates/parser/src/tests/grammar.rs
description: "using foo as _; using bar::{baz as _, qux}; a: type = self::unit;"
expression: parse(input)
---
Output {
    steps: [
        Enter(SourceFile),
        Enter(ModuleInner),
        Enter(UsingItem),
        KwUsing(1),
        Enter(UsingTree),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Enter(Rename),
        KwAs(1),
        Underscore(1),
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(UsingItem),
        KwUsing(1),
        Enter(UsingTree),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        ColonColon(2),
        Exit,
        Enter(UsingTreeList),
        OpenBrace(1),
        Enter(UsingTree),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Enter(Rename),
        KwAs(1),
        Underscore(1),
        Exit,
        Exit,
        Comma(1),
        Enter(UsingTree),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        CloseBrace(1),
        Exit,
        Exit,
        Semi(1),
        Exit,
        Enter(TypeItem),
        Enter(Name),
        Ident(1),
        Exit,
        Colon(1),
        Enter(TypeKind),
        KwType(1),
        Exit,
        Eq(1),
        Enter(PathType),
        Enter(Path),
        Enter(PathSegment),
        KwSelf(1),
        Exit,
        ColonColon(2),
        Enter(PathSegment),
        KwUnit(1),
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        Exit,
        Exit,
    ],
    errors: [],
}
