crates/parser/src/tests/snapshots/parser__tests__grammar__nested_expr_delimiters.snap
---
source: crates/parser/src/tests/grammar.rs
description: "({ a; }, [b, (c)])"
expression: parse_expr(input)
---
Output {
    steps: [
        Enter(TupleExpr),
        OpenParen(1),
        Enter(ExprField),
        Enter(BlockExpr),
        OpenBrace(1),
        Enter(ExprStmt),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Semi(1),
        Exit,
        CloseBrace(1),
        Exit,
        Exit,
        Comma(1),
        Enter(ExprField),
        Enter(ArrayExpr),
        OpenBrack(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        Comma(1),
        Enter(ParenExpr),
        OpenParen(1),
        Enter(PathExpr),
        Enter(Path),
        Enter(PathSegment),
        Enter(Name),
        Ident(1),
        Exit,
        Exit,
        Exit,
        Exit,
        CloseParen(1),
        Exit,
        CloseBrack(1),
        Exit,
        Exit,
        CloseParen(1),
        Exit,
    ],
    errors: [],
}
